Upload files from CodeZen

--- a/API/Layout/Gender/Add.yaml
+++ b/API/Layout/Gender/Add.yaml
@@ -2,3 +2,8 @@
   label: Name
   dataType: string
   column: 12
+  required: true
+  readOnly: false
+  hint: null
+  defaultValue: null
+  type: textbox
