--- a/API/Layout/Gender/List.yaml
+++ b/API/Layout/Gender/List.yaml
@@ -9,7 +9,7 @@ grid:
     fields: []
 filter:
   fields:
-    - dataType: string
+    - fieldName: Name
       label: Name
-      fieldName: Name
+      dataType: string
       column: 12
