--- a/API/Layout/Patient/Edit.yaml
+++ b/API/Layout/Patient/Edit.yaml
@@ -1,29 +1,81 @@
-- fieldName: Title
-  label: Title
-  dataType: guid
-  entityName: Title
+- dataType: section
+  label: Patient detail
+  showTitle: true
   column: 12
-- fieldName: FirstName
-  label: First name
-  dataType: string
-  required: true
+  fields:
+    - fieldName: Title
+      label: Title
+      dataType: guid
+      entityName: Title
+      column: 3
+      required: true
+      readOnly: false
+      hint: null
+      defaultValue: null
+      type: dropdownlist
+      lookupView: null
+      operatorForSearch: contains
+      filterable: true
+      showDefaultValue: true
+      isValuePrimitive: true
+      showHorizontal: false
+      valueField: id
+      textField: name
+    - fieldName: FirstName
+      label: First name
+      dataType: string
+      required: true
+      column: 4
+    - fieldName: LastName
+      label: Last name
+      dataType: string
+      column: 5
+    - fieldName: Gender
+      label: Gender
+      dataType: guid
+      required: true
+      entityName: Gender
+      column: 4
+    - fieldName: BloodGroup
+      label: Blood group
+      dataType: string
+      column: 6
+- dataType: section
+  label: Other detail
+  showTitle: true
   column: 12
-- fieldName: LastName
-  label: Last name
-  dataType: string
-  column: 12
-- fieldName: Gender
-  label: Gender
-  dataType: guid
-  required: true
-  entityName: Gender
-  column: 12
-- fieldName: Dob
-  label: Dob
-  dataType: datetime
-  required: true
-  column: 12
-- fieldName: BloodGroup
-  label: Blood group
-  dataType: string
-  column: 12
+  fields:
+    - dataType: groupfield
+      label: Group field
+      column: 6
+      fields:
+        - fieldName: Code
+          label: Code
+          dataType: string
+          column: 4
+        - fieldName: Mobile
+          label: Mobile
+          dataType: string
+          column: 8
+    - fieldName: Dob
+      label: Dob
+      dataType: datetime
+      required: true
+      column: 6
+    - fieldName: Age
+      label: Age
+      dataType: numeric
+      column: 6
+      required: true
+      readOnly: false
+      hint: null
+      defaultValue: null
+      scale: null
+      min: null
+      max: null
+      isSpinnersRequired: true
+      showNumericFormat: false
+    - fieldName: AlternateMobile
+      label: Alternate mobile
+      dataType: string
+      column: 6
