Upload files from CodeZen

--- a/API/Layout/Gender/List.yaml
+++ b/API/Layout/Gender/List.yaml
@@ -9,7 +9,7 @@ grid:
     fields: []
 filter:
   fields:
-    - fieldName: Name
+    - dataType: string
       label: Name
-      dataType: string
+      fieldName: Name
       column: 12
