--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -10,5 +10,9 @@
     "Key": "3IE+3buv1cvsKdxTA2Nhihd9Emj+QKnVSCSxi2E0c1c=",
     "Issuer": "Patient_test"
   },
+  "Azure": {
+    "BlobStorageConnectionString": "#BLOB-STORAGE-CONNECTION-STRING",
+    "BlobStorageContainerName": "#BLOB-STORAGE-CONTAINER-NAME"
+  },
   "TokenExpirationtime": "120"
 }
