--- a/ClientApp/src/assets/config/appconfig.json
+++ b/ClientApp/src/assets/config/appconfig.json
@@ -18,7 +18,7 @@
     },
     "buildInfo": {
         "number": "1.0.0.0",
-        "createdOn": "Thursday, September 26, 2024 6:37:33 AM"
+        "createdOn": "Thursday, September 26, 2024 1:01:45 PM"
     },
     "environments": []
 }
