Upload files from CodeZen

--- a/ClientApp/src/assets/config/appconfig.json
+++ b/ClientApp/src/assets/config/appconfig.json
@@ -18,7 +18,7 @@
     },
     "buildInfo": {
         "number": "1.0.0.0",
-        "createdOn": "Thursday, September 26, 2024 1:01:45 PM"
+        "createdOn": "Friday, September 27, 2024 5:50:51 AM"
     },
     "environments": []
 }
