--- a/API/Layout/Title/List.yaml
+++ b/API/Layout/Title/List.yaml
@@ -1,7 +1,15 @@
-grid: {}
+grid:
+  cardTitle:
+    fields:
+      - dataType: string
+        label: Name
+        fieldName: Name
+        column: 12
+  cardDetail:
+    fields: []
 filter:
   fields:
-    - fieldName: Name
+    - dataType: string
       label: Name
-      dataType: string
+      fieldName: Name
       column: 12
